fix: align vertically, remove max width from manager benefits widget

--- a/src/widget/Career/ManagerBenefits/ManagerBenefits.module.css
+++ b/src/widget/Career/ManagerBenefits/ManagerBenefits.module.css
@@ -3,6 +3,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
   row-gap: var(--gap-section);
 }
 
@@ -12,7 +13,6 @@
   width: 100%;
 
   min-width: 334px;
-  max-width: 1820px;
   height: 100%;
   min-height: 486px;
   max-height: 720px;
